<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NotifyActivity" android:background="@color/colorBlueDark">

    <Button
            android:text="@string/notify_cancel_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_notify_cancel" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btn_notify_update"/>
    <TextView
            android:text="@string/notify_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:textStyle="bold"
            android:textAlignment="center" android:fontFamily="casual"/>
    <Button
            android:text="@string/notify_me_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_notify_create" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
            android:text="@string/notify_update_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_notify_update" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btn_notify_create"/>
</androidx.constraintlayout.widget.ConstraintLayout>