<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity"
                                                   android:padding="5dp" android:background="@android:color/black">

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelinev"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>
    <Button
            android:text="@string/start_notify"
            android:drawableTop="@mipmap/round_notification_w"
            android:drawablePadding="5dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:id="@+id/btn_start_1" app:layout_constraintEnd_toStartOf="@+id/guidelinev"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.901"
            android:background="@drawable/shadow_button_layer_list"
            android:textColor="@android:color/background_light"
            android:elevation="20dp"
            android:paddingTop="10dp" android:paddingBottom="0dp"/>
    <Button
            android:text="@string/android_title"
            android:drawableTop="@mipmap/round_android_w"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:id="@+id/btn_start_2"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:background="@drawable/shadow_button_layer_list"
            android:textColor="@android:color/background_light"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guidelinev" android:paddingTop="10dp"/>

    <Button
            android:text="@string/weekend_title"
            android:drawableTop="@mipmap/round_weekend_w"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:id="@+id/btn_start_3"
            android:background="@drawable/shadow_button_layer_list"
            android:textColor="@android:color/background_light"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guidelinev" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:paddingTop="10dp"/>
    <Button
            android:text="@string/settings_title"
            android:drawableTop="@mipmap/round_settings_w"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:id="@+id/btn_start_4"
            android:background="@drawable/shadow_button_layer_list"
            android:textColor="@android:color/background_light"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelinev" android:paddingTop="10dp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/android_wallpaper"
            android:id="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintVertical_bias="0.032"
            android:contentDescription="@string/app_name" android:alpha="@android:integer/config_mediumAnimTime"
            android:background="@android:color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>